--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container"></div>
     <div class="card-first">
       <h1>Hello, I'm Phil</h1>
-      <img class="image-rounded" img src="../profile/images/picture2.jpg" width="100px" alt="profil">
+      <img class="image-rounded" img src="images/picture2.jpg" width="100px" alt="profil">
 
         <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
             sed diam nonumy eirmod tempor invidunt ut labore et dolore
